# apps/auth-service/src/routes/auth.router.ts
@@ -1,11 +1,15 @@
 import express, { Router } from "express";
-import { userRegistrationController } from "../controller/auth.controller";
+import { loginUser, userRegistrationController, verifyUser } from "../controller/auth.controller";
 
 
 const router: Router = express.Router();
 
 
 router.post("/user-registeration", userRegistrationController);
+router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
+
+
 
 
 export default router;
